--- a/account-notifications.html
+++ b/account-notifications.html
@@ -268,7 +268,7 @@
                                   </h1>
                                 </div>
                               </div>
-                              <div class="_e296pg">
+                              <div class="relative">
                                 <div class="_p03egf">
                                   <section
                                     role="status"
@@ -652,7 +652,7 @@
                                         </section>
                                       </div>
                                       <hr class="_19mw6to" />
-                                      <div class="_e296pg">
+                                      <div class="relative">
                                         <div class="_1ynbv25">
                                           <div
                                             id="undefinedEMAIL"
@@ -1449,7 +1449,7 @@
                                             </section>
                                           </div>
                                           <hr class="_19mw6to" />
-                                          <div class="_e296pg">
+                                          <div class="relative">
                                             <div class="_88xxct">
                                               <div
                                                 id="undefinedEMAIL"
@@ -2335,7 +2335,7 @@
               >
                 <div class="modal__close">
                   <button aria-label="Close" type="button" class="btn-close">
-                    <span class="_e296pg"
+                    <span class="relative"
                       ><svg
                         viewBox="0 0 32 32"
                         xmlns="http://www.w3.org/2000/svg"
@@ -2378,7 +2378,7 @@
                       Superhost status.
                     </div>
                   </section>
-                  <div class="_e296pg">
+                  <div class="relative">
                     <div
                       id="HOST_RECOGNITION_ACHIEVEMENTSEMAIL"
                       aria-disabled="false"
@@ -2550,7 +2550,7 @@
               >
                 <div class="modal__close">
                   <button aria-label="Close" type="button" class="btn-close">
-                    <span class="_e296pg"
+                    <span class="relative"
                       ><svg
                         viewBox="0 0 32 32"
                         xmlns="http://www.w3.org/2000/svg"
