--- a/account-settings.html
+++ b/account-settings.html
@@ -216,7 +216,7 @@
                         <div class="_1ynbv25">
                           <div class="c1yo0219 dir dir-ltr">
                             <div style="margin: -16px 0px 0px">
-                              <div class="_e296pg">
+                              <div class="relative">
                                 <div class="_1j3tda">
                                   <div class="c3dtyuj dir dir-ltr">
                                     <div class="box-border">
