--- a/basics.html
+++ b/basics.html
@@ -59,7 +59,7 @@
                             aria-label="Experience hosting dashboard"
                             href="/experience-hosting"
                             class="btn-close"
-                            ><span class="_e296pg"
+                            ><span class="relative"
                               ><svg
                                 viewBox="0 0 32 32"
                                 xmlns="http://www.w3.org/2000/svg"
@@ -91,7 +91,7 @@
                         <h2 id="edit-experience-modal-heading" class="_7x5ntq">
                           Submit your experience
                         </h2>
-                        <div class="_e296pg">
+                        <div class="relative">
                           <div>
                             <div class="box-border" id="Your idea-section-row">
                               <div
@@ -628,7 +628,7 @@
                                     font-weight: bold;
                                   }
                                 </style>
-                                <div class="_e296pg" data-reach-combobox="">
+                                <div class="relative" data-reach-combobox="">
                                   <div class="_1jj61m9">
                                     <label
                                       class="_1yw7hpv"
@@ -662,7 +662,7 @@
                                 <!-- second combo box -->
 
                                 <div
-                                  class="_e296pg"
+                                  class="relative"
                                   data-reach-combobox=""
                                   style="margin-top: 20px"
                                 >
@@ -960,7 +960,7 @@
         >
           <div class="modal__close">
             <button aria-label="Close" type="button" class="btn-close">
-              <span class="_e296pg"
+              <span class="relative"
                 ><svg
                   viewBox="0 0 32 32"
                   xmlns="http://www.w3.org/2000/svg"
@@ -1168,7 +1168,7 @@
         >
           <div class="modal__close">
             <button aria-label="Close" type="button" class="btn-close">
-              <span class="_e296pg"
+              <span class="relative"
                 ><svg
                   viewBox="0 0 32 32"
                   xmlns="http://www.w3.org/2000/svg"
