--- a/become-a-host/_location.html
+++ b/become-a-host/_location.html
@@ -43,7 +43,7 @@
               <div class="_15c6744c" aria-hidden="false">
                 <div class="_kp9zti">
                   <a aria-label="Airbnb homepage" href="/" class="_1y540ni"
-                    ><span class="_e296pg"
+                    ><span class="relative"
                       ><svg
                         viewBox="0 0 32 32"
                         xmlns="http://www.w3.org/2000/svg"
@@ -203,7 +203,7 @@
                                             type="button"
                                             class="btn-close"
                                           >
-                                            <span class="_e296pg"
+                                            <span class="relative"
                                               ><svg
                                                 viewBox="0 0 32 32"
                                                 xmlns="http://www.w3.org/2000/svg"
