--- a/become-a-host/photos.html
+++ b/become-a-host/photos.html
@@ -43,7 +43,7 @@
               <div class="_1b9ixxkj" aria-hidden="false">
                 <div class="_kp9zti">
                   <a aria-label="Airbnb homepage" href="/" class="_1y540ni"
-                    ><span class="_e296pg"
+                    ><span class="relative"
                       ><svg
                         viewBox="0 0 32 32"
                         xmlns="http://www.w3.org/2000/svg"
@@ -182,7 +182,7 @@
                               type="button"
                               class="_yh5j8f"
                             >
-                              <span class="_e296pg"
+                              <span class="relative"
                                 ><svg
                                   viewBox="0 0 32 32"
                                   xmlns="http://www.w3.org/2000/svg"
@@ -249,7 +249,7 @@
                           type="button"
                           class="_yh5j8f"
                         >
-                          <span class="_e296pg"
+                          <span class="relative"
                             ><svg
                               viewBox="0 0 32 32"
                               xmlns="http://www.w3.org/2000/svg"
@@ -451,7 +451,7 @@
                                               >
                                                 <div class="_1fopc40">
                                                   <div
-                                                    class="_e296pg"
+                                                    class="relative"
                                                     style="
                                                       padding-bottom: 66.67%;
                                                     "
@@ -593,7 +593,7 @@
                                               >
                                                 <div class="_1fopc40">
                                                   <div
-                                                    class="_e296pg"
+                                                    class="relative"
                                                     style="
                                                       padding-bottom: 66.67%;
                                                     "
@@ -730,7 +730,7 @@
                                               >
                                                 <div class="_1fopc40">
                                                   <div
-                                                    class="_e296pg"
+                                                    class="relative"
                                                     style="
                                                       padding-bottom: 66.67%;
                                                     "
@@ -867,7 +867,7 @@
                                               >
                                                 <div class="_1fopc40">
                                                   <div
-                                                    class="_e296pg"
+                                                    class="relative"
                                                     style="
                                                       padding-bottom: 66.67%;
                                                     "
@@ -1004,7 +1004,7 @@
                                               >
                                                 <div class="_1fopc40">
                                                   <div
-                                                    class="_e296pg"
+                                                    class="relative"
                                                     style="
                                                       padding-bottom: 66.67%;
                                                     "
@@ -1131,7 +1131,7 @@
                                       <div class="_83nzdcg">
                                         <div class="_18dgbyf">
                                           <div
-                                            class="_e296pg"
+                                            class="relative"
                                             style="padding-bottom: 66.67%"
                                           >
                                             <div class="_1k2xyy0">
