--- a/become-a-host/title.html
+++ b/become-a-host/title.html
@@ -40,7 +40,7 @@
               <div class="_1b9ixxkj" aria-hidden="false">
                 <div class="_kp9zti">
                   <a aria-label="Airbnb homepage" href="/" class="_1y540ni"
-                    ><span class="_e296pg"
+                    ><span class="relative"
                       ><svg
                         viewBox="0 0 32 32"
                         xmlns="http://www.w3.org/2000/svg"
@@ -179,7 +179,7 @@
                               type="button"
                               class="_yh5j8f"
                             >
-                              <span class="_e296pg"
+                              <span class="relative"
                                 ><svg
                                   viewBox="0 0 32 32"
                                   xmlns="http://www.w3.org/2000/svg"
@@ -244,7 +244,7 @@
                           type="button"
                           class="_yh5j8f"
                         >
-                          <span class="_e296pg"
+                          <span class="relative"
                             ><svg
                               viewBox="0 0 32 32"
                               xmlns="http://www.w3.org/2000/svg"
