--- a/contact-host.html
+++ b/contact-host.html
@@ -2347,7 +2347,7 @@
                                                                   class="w-100"
                                                                 >
                                                                   <div
-                                                                    class="_e296pg"
+                                                                    class="relative"
                                                                     style="
                                                                       flex: 1;
                                                                     "
@@ -2457,7 +2457,7 @@
                                                                   class="_bp34sw"
                                                                 >
                                                                   <div
-                                                                    class="_e296pg"
+                                                                    class="relative"
                                                                     style="
                                                                       flex: 1;
                                                                     "
