--- a/edit/what.html
+++ b/edit/what.html
@@ -48,7 +48,7 @@
                             aria-label="Experience hosting dashboard"
                             href="/experience-hosting"
                             class="btn-close"
-                            ><span class="_e296pg"
+                            ><span class="relative"
                               ><svg
                                 viewBox="0 0 32 32"
                                 xmlns="http://www.w3.org/2000/svg"
@@ -84,7 +84,7 @@
                             Add dates
                           </button>
                         </div>
-                        <div class="_e296pg">
+                        <div class="relative">
                           <div>
                             <div
                               class="box-border"
