--- a/explore-when.html
+++ b/explore-when.html
@@ -269,7 +269,7 @@
                                                                       <div>
                                                                         <div>
                                                                           <div
-                                                                            class="_e296pg"
+                                                                            class="relative"
                                                                             aria-hidden="true"
                                                                             role="presentation"
                                                                           >
