--- a/gift.html
+++ b/gift.html
@@ -327,7 +327,7 @@
                                         type="button"
                                         class="btn-close"
                                       >
-                                        <span class="_e296pg"
+                                        <span class="relative"
                                           ><svg
                                             viewBox="0 0 32 32"
                                             xmlns="http://www.w3.org/2000/svg"
