--- a/login-security.html
+++ b/login-security.html
@@ -268,7 +268,7 @@
                                   </h1>
                                 </div>
                               </div>
-                              <div class="_e296pg">
+                              <div class="relative">
                                 <div class="_2h22gn">
                                   <div class="_169grxv2">
                                     <div style="margin-top: 32px">
@@ -1312,7 +1312,7 @@
                                 <div class="_2h22gn">
                                   <div class="_169grxv2">
                                     <div>
-                                      <div class="_e296pg">
+                                      <div class="relative">
                                         <div class="_4nwxh0j">
                                           <div class="_qgvrjoy">
                                             <div role="tablist" class="_csc5ey">
