--- a/merchandising.html
+++ b/merchandising.html
@@ -1307,7 +1307,7 @@
                                                             class="_sp8hvh"
                                                           >
                                                             <span
-                                                              class="_e296pg"
+                                                              class="relative"
                                                               ><span
                                                                 class="_krjbj"
                                                                 >_</span
@@ -1342,7 +1342,7 @@
                                                             class="_sp8hvh"
                                                           >
                                                             <span
-                                                              class="_e296pg"
+                                                              class="relative"
                                                               ><span
                                                                 class="_krjbj"
                                                                 >_</span
