--- a/payment.html
+++ b/payment.html
@@ -111,7 +111,7 @@
                                               <div class="_1nobabx">
                                                 <div class="_1b5xz5">
                                                   <a href="/" class="btn-save"
-                                                    ><span class="_e296pg"
+                                                    ><span class="relative"
                                                       ><svg
                                                         viewBox="0 0 32 32"
                                                         xmlns="http://www.w3.org/2000/svg"
@@ -790,7 +790,7 @@
                                                               ></span>
                                                             </div>
                                                             <div
-                                                              class="_e296pg"
+                                                              class="relative"
                                                             ></div>
                                                           </div>
                                                         </div>
