--- a/places.html
+++ b/places.html
@@ -1875,7 +1875,7 @@
                                               );
                                             "
                                           >
-                                            <div class="_e296pg">
+                                            <div class="relative">
                                               <div
                                                 class="card__media"
                                                 style="
@@ -2590,7 +2590,7 @@
                                               );
                                             "
                                           >
-                                            <div class="_e296pg">
+                                            <div class="relative">
                                               <div
                                                 class="card__media"
                                                 style="
@@ -3302,7 +3302,7 @@
                                               );
                                             "
                                           >
-                                            <div class="_e296pg">
+                                            <div class="relative">
                                               <div
                                                 class="card__media"
                                                 style="
@@ -4014,7 +4014,7 @@
                                               );
                                             "
                                           >
-                                            <div class="_e296pg">
+                                            <div class="relative">
                                               <div
                                                 class="card__media"
                                                 style="
@@ -4726,7 +4726,7 @@
                                               );
                                             "
                                           >
-                                            <div class="_e296pg">
+                                            <div class="relative">
                                               <div
                                                 class="card__media"
                                                 style="
@@ -5430,7 +5430,7 @@
                                               );
                                             "
                                           >
-                                            <div class="_e296pg">
+                                            <div class="relative">
                                               <div
                                                 class="card__media"
                                                 style="
@@ -6144,7 +6144,7 @@
                                               );
                                             "
                                           >
-                                            <div class="_e296pg">
+                                            <div class="relative">
                                               <div
                                                 class="card__media"
                                                 style="
@@ -6856,7 +6856,7 @@
                                               );
                                             "
                                           >
-                                            <div class="_e296pg">
+                                            <div class="relative">
                                               <div
                                                 class="card__media"
                                                 style="
@@ -7488,7 +7488,7 @@
                                               );
                                             "
                                           >
-                                            <div class="_e296pg">
+                                            <div class="relative">
                                               <div
                                                 class="card__media"
                                                 style="
@@ -8120,7 +8120,7 @@
                                               );
                                             "
                                           >
-                                            <div class="_e296pg">
+                                            <div class="relative">
                                               <div
                                                 class="card__media"
                                                 style="
@@ -8833,7 +8833,7 @@
                                               );
                                             "
                                           >
-                                            <div class="_e296pg">
+                                            <div class="relative">
                                               <div
                                                 class="card__media"
                                                 style="
@@ -9546,7 +9546,7 @@
                                               );
                                             "
                                           >
-                                            <div class="_e296pg">
+                                            <div class="relative">
                                               <div
                                                 class="card__media"
                                                 style="
@@ -10258,7 +10258,7 @@
                                               );
                                             "
                                           >
-                                            <div class="_e296pg">
+                                            <div class="relative">
                                               <div
                                                 class="card__media"
                                                 style="
@@ -10970,7 +10970,7 @@
                                               );
                                             "
                                           >
-                                            <div class="_e296pg">
+                                            <div class="relative">
                                               <div
                                                 class="card__media"
                                                 style="
@@ -11682,7 +11682,7 @@
                                               );
                                             "
                                           >
-                                            <div class="_e296pg">
+                                            <div class="relative">
                                               <div
                                                 class="card__media"
                                                 style="
@@ -12388,7 +12388,7 @@
                                               );
                                             "
                                           >
-                                            <div class="_e296pg">
+                                            <div class="relative">
                                               <div
                                                 class="card__media"
                                                 style="
@@ -13166,7 +13166,7 @@
                                                     </svg>
                                                   </button>
                                                 </div>
-                                                <div class="_e296pg">
+                                                <div class="relative">
                                                   <div
                                                     class="_1mtnjq3q"
                                                     style="
@@ -13413,7 +13413,7 @@
                                                     </svg>
                                                   </button>
                                                 </div>
-                                                <div class="_e296pg">
+                                                <div class="relative">
                                                   <div
                                                     class="_1mtnjq3q"
                                                     style="
@@ -13640,7 +13640,7 @@
                                                     </svg>
                                                   </button>
                                                 </div>
-                                                <div class="_e296pg">
+                                                <div class="relative">
                                                   <div
                                                     class="_1mtnjq3q"
                                                     style="
@@ -13867,7 +13867,7 @@
                                                     </svg>
                                                   </button>
                                                 </div>
-                                                <div class="_e296pg">
+                                                <div class="relative">
                                                   <div
                                                     class="_1mtnjq3q"
                                                     style="
