--- a/preferences.html
+++ b/preferences.html
@@ -268,7 +268,7 @@
                                   </h1>
                                 </div>
                               </div>
-                              <div class="_e296pg">
+                              <div class="relative">
                                 <div class="border-bottom-muted">
                                   <div style="margin-top: 24px">
                                     <div class="_hgs47m">
