--- a/privacy-and-sharing.html
+++ b/privacy-and-sharing.html
@@ -268,7 +268,7 @@
                                   </h1>
                                 </div>
                               </div>
-                              <div class="_e296pg">
+                              <div class="relative">
                                 <div class="_1u988s40">
                                   <div style="margin: 0px">
                                     <div style="margin-bottom: 48px">
@@ -278,7 +278,7 @@
                                             <div
                                               id="account-settings-main-navigation-tabs"
                                             >
-                                              <div class="_e296pg">
+                                              <div class="relative">
                                                 <div
                                                   class="_1xkr92p"
                                                   data-testid="tab-list-wrapper"
@@ -964,7 +964,7 @@
                                     <div
                                       id="account-settings-main-navigation-tabs"
                                     >
-                                      <div class="_e296pg">
+                                      <div class="relative">
                                         <div
                                           class="_1xkr92p"
                                           data-testid="tab-list-wrapper"
