--- a/products.html
+++ b/products.html
@@ -273,7 +273,7 @@
                                                     type="button"
                                                     class="btn-close"
                                                   >
-                                                    <span class="_e296pg"
+                                                    <span class="relative"
                                                       ><svg
                                                         viewBox="0 0 32 32"
                                                         xmlns="http://www.w3.org/2000/svg"
@@ -311,7 +311,7 @@
                                                     type="button"
                                                     class="btn-close"
                                                   >
-                                                    <span class="_e296pg"
+                                                    <span class="relative"
                                                       ><svg
                                                         viewBox="0 0 32 32"
                                                         xmlns="http://www.w3.org/2000/svg"
@@ -3100,7 +3100,7 @@
                                                                       class="btn-close"
                                                                     >
                                                                       <span
-                                                                        class="_e296pg"
+                                                                        class="relative"
                                                                         ><svg
                                                                           viewBox="0 0 18 18"
                                                                           role="presentation"
@@ -3130,7 +3130,7 @@
                                                                       class="btn-close"
                                                                     >
                                                                       <span
-                                                                        class="_e296pg"
+                                                                        class="relative"
                                                                         ><svg
                                                                           viewBox="0 0 18 18"
                                                                           role="presentation"
@@ -9101,7 +9101,7 @@
                                               data-section-id="BOOK_IT_NAV"
                                               style="display: contents"
                                             >
-                                              <div class="_e296pg">
+                                              <div class="relative">
                                                 <div class="_xkkzkj">
                                                   <div class="_14ukjft">
                                                     <div
@@ -10641,7 +10641,7 @@
                                                                         class="btn-close"
                                                                       >
                                                                         <span
-                                                                          class="_e296pg"
+                                                                          class="relative"
                                                                           ><svg
                                                                             viewBox="0 0 18 18"
                                                                             role="presentation"
@@ -10671,7 +10671,7 @@
                                                                         class="btn-close"
                                                                       >
                                                                         <span
-                                                                          class="_e296pg"
+                                                                          class="relative"
                                                                           ><svg
                                                                             viewBox="0 0 18 18"
                                                                             role="presentation"
@@ -13780,7 +13780,7 @@
                                                             class="btn-save"
                                                           >
                                                             <span
-                                                              class="_e296pg"
+                                                              class="relative"
                                                               ><svg
                                                                 viewBox="0 0 32 32"
                                                                 xmlns="http://www.w3.org/2000/svg"
@@ -13926,7 +13926,7 @@
                                                                         class="btn-close"
                                                                       >
                                                                         <span
-                                                                          class="_e296pg"
+                                                                          class="relative"
                                                                           ><svg
                                                                             viewBox="0 0 18 18"
                                                                             role="presentation"
@@ -13956,7 +13956,7 @@
                                                                         class="btn-close"
                                                                       >
                                                                         <span
-                                                                          class="_e296pg"
+                                                                          class="relative"
                                                                           ><svg
                                                                             viewBox="0 0 18 18"
                                                                             role="presentation"
@@ -16291,7 +16291,7 @@
                                                             class="btn-save"
                                                           >
                                                             <span
-                                                              class="_e296pg"
+                                                              class="relative"
                                                               ><svg
                                                                 viewBox="0 0 32 32"
                                                                 xmlns="http://www.w3.org/2000/svg"
@@ -16481,7 +16481,7 @@
                                                                         class="w-100"
                                                                       >
                                                                         <div
-                                                                          class="_e296pg"
+                                                                          class="relative"
                                                                           style="
                                                                             flex: 1
                                                                               1
@@ -16589,7 +16589,7 @@
                                                                         class="_bp34sw"
                                                                       >
                                                                         <div
-                                                                          class="_e296pg"
+                                                                          class="relative"
                                                                           style="
                                                                             flex: 1
                                                                               1
@@ -16977,7 +16977,7 @@
                                                                         class="w-100"
                                                                       >
                                                                         <div
-                                                                          class="_e296pg"
+                                                                          class="relative"
                                                                           style="
                                                                             flex: 1
                                                                               1
@@ -17083,7 +17083,7 @@
                                                                         class="_bp34sw"
                                                                       >
                                                                         <div
-                                                                          class="_e296pg"
+                                                                          class="relative"
                                                                           style="
                                                                             flex: 1
                                                                               1
@@ -17666,7 +17666,7 @@
                                                                         class="w-100"
                                                                       >
                                                                         <div
-                                                                          class="_e296pg"
+                                                                          class="relative"
                                                                           style="
                                                                             flex: 1
                                                                               1
@@ -17776,7 +17776,7 @@
                                                                         class="_bp34sw"
                                                                       >
                                                                         <div
-                                                                          class="_e296pg"
+                                                                          class="relative"
                                                                           style="
                                                                             flex: 1
                                                                               1
