--- a/professional-hosting.html
+++ b/professional-hosting.html
@@ -268,7 +268,7 @@
                                   </h1>
                                 </div>
                               </div>
-                              <div class="_e296pg">
+                              <div class="relative">
                                 <div class="_1okh7pi0">
                                   <div class="flex-bar">
                                     <div class="flex-bar-item-grow">
