--- a/profile.html
+++ b/profile.html
@@ -374,7 +374,7 @@
                             <div></div>
                           </div>
                           <div style="margin: 36px 24px 24px">
-                            <div class="_e296pg">
+                            <div class="relative">
                               <div
                                 class="_1mb2uol"
                                 data-veloute="user_profile_frame"
@@ -923,7 +923,7 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                                                 }
                                               </style>
                                               <div
-                                                class="_e296pg"
+                                                class="relative"
                                                 data-reach-combobox=""
                                               >
                                                 <div class="_1h4ezu9">
@@ -973,7 +973,7 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                                                     type="button"
                                                     class="btn-close"
                                                   >
-                                                    <span class="_e296pg"
+                                                    <span class="relative"
                                                       ><svg
                                                         viewBox="0 0 32 32"
                                                         xmlns="http://www.w3.org/2000/svg"
@@ -1009,7 +1009,7 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                                                     type="button"
                                                     class="btn-close"
                                                   >
-                                                    <span class="_e296pg"
+                                                    <span class="relative"
                                                       ><svg
                                                         viewBox="0 0 32 32"
                                                         xmlns="http://www.w3.org/2000/svg"
@@ -1209,7 +1209,7 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                                                 >
                                               </h2>
                                             </div>
-                                            <div class="_e296pg">
+                                            <div class="relative">
                                               <div
                                                 class="_1hsn6c7"
                                                 data-testid="carousel-wrapper"
@@ -2062,7 +2062,7 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                                           }
                                         </style>
                                         <div
-                                          class="_e296pg"
+                                          class="relative"
                                           data-reach-combobox=""
                                         >
                                           <div class="_1h4ezu9">
@@ -2112,7 +2112,7 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                                               type="button"
                                               class="btn-close"
                                             >
-                                              <span class="_e296pg"
+                                              <span class="relative"
                                                 ><svg
                                                   viewBox="0 0 32 32"
                                                   xmlns="http://www.w3.org/2000/svg"
@@ -2146,7 +2146,7 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                                               type="button"
                                               class="btn-close"
                                             >
-                                              <span class="_e296pg"
+                                              <span class="relative"
                                                 ><svg
                                                   viewBox="0 0 32 32"
                                                   xmlns="http://www.w3.org/2000/svg"
@@ -2332,7 +2332,7 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                                           >
                                         </h2>
                                       </div>
-                                      <div class="_e296pg">
+                                      <div class="relative">
                                         <div
                                           class="_1hsn6c7"
                                           data-testid="carousel-wrapper"
@@ -3245,7 +3245,7 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
               >
                 <div class="modal__close">
                   <button aria-label="Close" type="button" class="btn-close">
-                    <span class="_e296pg"
+                    <span class="relative"
                       ><svg
                         viewBox="0 0 32 32"
                         xmlns="http://www.w3.org/2000/svg"
