--- a/resolutions_3.html
+++ b/resolutions_3.html
@@ -406,7 +406,7 @@
                                         </div></div
                                     ></span>
                                   </div>
-                                  <div class="_e296pg"></div>
+                                  <div class="relative"></div>
                                 </div>
                               </div>
                             </section>
