--- a/resolutions_pay.html
+++ b/resolutions_pay.html
@@ -179,7 +179,7 @@
                           <ul class="_1s04l2o">
                             <li class="_1g2dfiu">
                               <div>
-                                <div class="_e296pg">
+                                <div class="relative">
                                   <a
                                     href="/become-a-host?from_nav=1"
                                     class="_84rcdk"
@@ -200,7 +200,7 @@
                             </li>
                             <li class="_1g2dfiu">
                               <div>
-                                <div class="_e296pg">
+                                <div class="relative">
                                   <button
                                     type="button"
                                     class="_84rcdk"
@@ -228,7 +228,7 @@
                             </li>
                             <li class="_1g2dfiu">
                               <div>
-                                <div class="_e296pg">
+                                <div class="relative">
                                   <a
                                     href="/wishlists"
                                     class="_84rcdk"
@@ -249,7 +249,7 @@
                             </li>
                             <li class="_1g2dfiu">
                               <div>
-                                <div class="_e296pg">
+                                <div class="relative">
                                   <a
                                     href="/trips/v1"
                                     class="_84rcdk"
@@ -271,7 +271,7 @@
                             </li>
                             <li class="_1g2dfiu">
                               <div>
-                                <div class="_e296pg">
+                                <div class="relative">
                                   <button
                                     type="button"
                                     class="_84rcdk"
@@ -296,7 +296,7 @@
                             </li>
                             <li class="_1g2dfiu">
                               <div>
-                                <div class="_e296pg">
+                                <div class="relative">
                                   <a
                                     href="/help"
                                     class="_84rcdk"
@@ -319,7 +319,7 @@
                             <li class="_1g2dfiu">
                               <div style="margin-right: 8px">
                                 <div>
-                                  <div class="_e296pg">
+                                  <div class="relative">
                                     <button
                                       type="button"
                                       class="_84rcdk"
