--- a/submission/basic.html
+++ b/submission/basic.html
@@ -59,7 +59,7 @@
                             aria-label="Experience hosting dashboard"
                             href="/experience-hosting"
                             class="btn-close"
-                            ><span class="_e296pg"
+                            ><span class="relative"
                               ><svg
                                 viewBox="0 0 32 32"
                                 xmlns="http://www.w3.org/2000/svg"
@@ -90,7 +90,7 @@
                         <h2 id="edit-experience-modal-heading" class="_7x5ntq">
                           Submit your experience
                         </h2>
-                        <div class="_e296pg">
+                        <div class="relative">
                           <div>
                             <div class="box-border" id="Your idea-section-row">
                               <div
@@ -1111,7 +1111,7 @@
                                     font-weight: bold;
                                   }
                                 </style>
-                                <div class="_e296pg" data-reach-combobox="">
+                                <div class="relative" data-reach-combobox="">
                                   <div class="_1jj61m9">
                                     <label
                                       class="_1yw7hpv"
@@ -1379,7 +1379,7 @@
         >
           <div class="modal__close">
             <button aria-label="Close" type="button" class="btn-close">
-              <span class="_e296pg"
+              <span class="relative"
                 ><svg
                   viewBox="0 0 32 32"
                   xmlns="http://www.w3.org/2000/svg"
@@ -1587,7 +1587,7 @@
         >
           <div class="modal__close">
             <button aria-label="Close" type="button" class="btn-close">
-              <span class="_e296pg"
+              <span class="relative"
                 ><svg
                   viewBox="0 0 32 32"
                   xmlns="http://www.w3.org/2000/svg"
