--- a/submission/bring.html
+++ b/submission/bring.html
@@ -53,7 +53,7 @@
                             aria-label="Experience hosting dashboard"
                             href="/experience-hosting"
                             class="btn-close"
-                            ><span class="_e296pg"
+                            ><span class="relative"
                               ><svg
                                 viewBox="0 0 32 32"
                                 xmlns="http://www.w3.org/2000/svg"
@@ -84,7 +84,7 @@
                         <h2 id="edit-experience-modal-heading" class="_7x5ntq">
                           Submit your experience
                         </h2>
-                        <div class="_e296pg">
+                        <div class="relative">
                           <div>
                             <div class="box-border" id="Your idea-section-row">
                               <div
@@ -1129,7 +1129,7 @@
                                           type="button"
                                           class="btn-close"
                                         >
-                                          <span class="_e296pg"
+                                          <span class="relative"
                                             ><svg
                                               viewBox="0 0 32 32"
                                               xmlns="http://www.w3.org/2000/svg"
@@ -1183,7 +1183,7 @@
                                           type="button"
                                           class="btn-close"
                                         >
-                                          <span class="_e296pg"
+                                          <span class="relative"
                                             ><svg
                                               viewBox="0 0 32 32"
                                               xmlns="http://www.w3.org/2000/svg"
