--- a/transaction_history.html
+++ b/transaction_history.html
@@ -296,7 +296,7 @@
                                                 type="button"
                                                 class="_14t42ha"
                                               >
-                                                <span class="_e296pg"
+                                                <span class="relative"
                                                   ><svg
                                                     viewBox="0 0 32 32"
                                                     xmlns="http://www.w3.org/2000/svg"
@@ -511,7 +511,7 @@
                           </div>
                           <div style="margin-top: 8px">
                             <div>
-                              <div class="_e296pg">
+                              <div class="relative">
                                 <div class="_4nwxh0j">
                                   <div class="_qgvrjoy">
                                     <div role="tablist" class="_csc5ey">
@@ -631,7 +631,7 @@
                                         <div>
                                           <div class="_2h22gn">
                                             <div class="_j6urmsh">
-                                              <div class="_e296pg">
+                                              <div class="relative">
                                                 <div class="_9hxttoo">
                                                   <div class="_wlf6154">
                                                     <div class="overflow-hidden">
@@ -669,7 +669,7 @@
                                               </div>
                                             </div>
                                             <div class="_j6urmsh">
-                                              <div class="_e296pg">
+                                              <div class="relative">
                                                 <div class="_9hxttoo">
                                                   <div class="_wlf6154">
                                                     <div class="overflow-hidden">
