--- a/wishlists.html
+++ b/wishlists.html
@@ -224,7 +224,7 @@
                                 </h1>
                               </div>
                             </div>
-                            <main id="site-content" class="_e296pg">
+                            <main id="site-content" class="relative">
                               <section>
                                 <div class="_1udzt2s">
                                   <div id="FMP-target">
