--- a/edit/bring.html
+++ b/edit/bring.html
@@ -53,7 +53,7 @@
                             aria-label="Experience hosting dashboard"
                             href="/experience-hosting"
                             class="btn-close"
-                            ><span class="_e296pg"
+                            ><span class="relative"
                               ><svg
                                 viewBox="0 0 32 32"
                                 xmlns="http://www.w3.org/2000/svg"
@@ -89,7 +89,7 @@
                             Add dates
                           </button>
                         </div>
-                        <div class="_e296pg">
+                        <div class="relative">
                           <div>
                             <div
                               class="box-border"
@@ -501,7 +501,7 @@
                                                   type="button"
                                                   class="btn-close"
                                                 >
-                                                  <span class="_e296pg"
+                                                  <span class="relative"
                                                     ><svg
                                                       viewBox="0 0 32 32"
                                                       xmlns="http://www.w3.org/2000/svg"
@@ -561,7 +561,7 @@
                                                   type="button"
                                                   class="btn-close"
                                                 >
-                                                  <span class="_e296pg"
+                                                  <span class="relative"
                                                     ><svg
                                                       viewBox="0 0 32 32"
                                                       xmlns="http://www.w3.org/2000/svg"
@@ -621,7 +621,7 @@
                                                   type="button"
                                                   class="btn-close"
                                                 >
-                                                  <span class="_e296pg"
+                                                  <span class="relative"
                                                     ><svg
                                                       viewBox="0 0 32 32"
                                                       xmlns="http://www.w3.org/2000/svg"
@@ -681,7 +681,7 @@
                                                   type="button"
                                                   class="btn-close"
                                                 >
-                                                  <span class="_e296pg"
+                                                  <span class="relative"
                                                     ><svg
                                                       viewBox="0 0 32 32"
                                                       xmlns="http://www.w3.org/2000/svg"
@@ -741,7 +741,7 @@
                                                   type="button"
                                                   class="btn-close"
                                                 >
-                                                  <span class="_e296pg"
+                                                  <span class="relative"
                                                     ><svg
                                                       viewBox="0 0 32 32"
                                                       xmlns="http://www.w3.org/2000/svg"
@@ -801,7 +801,7 @@
                                                   type="button"
                                                   class="btn-close"
                                                 >
-                                                  <span class="_e296pg"
+                                                  <span class="relative"
                                                     ><svg
                                                       viewBox="0 0 32 32"
                                                       xmlns="http://www.w3.org/2000/svg"
