--- a/help.html
+++ b/help.html
@@ -90,7 +90,7 @@
                               type="button"
                               class="btn-save"
                             >
-                              <span class="_e296pg"
+                              <span class="relative"
                                 ><div
                                   class="i4eawus dir dir-ltr"
                                   aria-hidden="true"
@@ -315,7 +315,7 @@
                           </div>
                           <div id="FMP-target">
                             <div id="role_tabs">
-                              <div class="_e296pg">
+                              <div class="relative">
                                 <div
                                   class="_1xkr92p"
                                   data-testid="tab-list-wrapper"
@@ -1838,7 +1838,7 @@
                                                           type="button"
                                                           class="_1ue05kx"
                                                         >
-                                                          <span class="_e296pg"
+                                                          <span class="relative"
                                                             ><span
                                                               class="_krjbj"
                                                               >_</span
