--- a/inbox.html
+++ b/inbox.html
@@ -990,7 +990,7 @@
         box-sizing: border-box !important;
         display: none !important;
       }
-      ._e296pg {
+      .relative {
         position: relative !important;
       }
       @keyframes keyframe_vjn41d {
@@ -7437,7 +7437,7 @@
                               type="button"
                               class="btn-close"
                             >
-                              <span class="_e296pg"
+                              <span class="relative"
                                 ><svg
                                   viewBox="0 0 32 32"
                                   xmlns="http://www.w3.org/2000/svg"
@@ -7611,7 +7611,7 @@
                                       type="button"
                                       class="_10wieer"
                                     >
-                                      <span class="_e296pg"
+                                      <span class="relative"
                                         ><svg
                                           viewBox="0 0 32 32"
                                           xmlns="http://www.w3.org/2000/svg"
@@ -7652,7 +7652,7 @@
                                     type="button"
                                     class="_1adqvh3"
                                   >
-                                    <span class="_e296pg"
+                                    <span class="relative"
                                       ><svg
                                         viewBox="0 0 16 16"
                                         xmlns="http://www.w3.org/2000/svg"
@@ -7729,7 +7729,7 @@
                                         type="button"
                                         class="_v54ooj"
                                       >
-                                        <span class="_e296pg"
+                                        <span class="relative"
                                           ><svg
                                             viewBox="0 0 16 16"
                                             xmlns="http://www.w3.org/2000/svg"
@@ -7757,7 +7757,7 @@
                             </nav>
                             <div class="_1k4pfld">
                               <div class="_1hnwvlpf">
-                                <div class="_e296pg">
+                                <div class="relative">
                                   <div
                                     class="dir dir-ltr"
                                     role="group"
@@ -8127,7 +8127,7 @@
                                 </div>
                               </div>
                               <div class="_169s2kv9">
-                                <div class="_e296pg"></div>
+                                <div class="relative"></div>
                               </div>
                             </div>
                           </div>
@@ -8154,7 +8154,7 @@
                                     data-inline="true"
                                     href="/hosting/inbox/exp/folder/all"
                                     class="_10wieer"
-                                    ><span class="_e296pg"
+                                    ><span class="relative"
                                       ><svg
                                         viewBox="0 0 32 32"
                                         xmlns="http://www.w3.org/2000/svg"
@@ -8206,7 +8206,7 @@
                                       type="button"
                                       class="_10wieer"
                                     >
-                                      <span class="_e296pg"
+                                      <span class="relative"
                                         ><svg
                                           viewBox="0 0 32 32"
                                           xmlns="http://www.w3.org/2000/svg"
@@ -8232,7 +8232,7 @@
                                       type="button"
                                       class="_10wieer"
                                     >
-                                      <span class="_e296pg"
+                                      <span class="relative"
                                         ><svg
                                           viewBox="0 0 32 32"
                                           xmlns="http://www.w3.org/2000/svg"
@@ -8265,7 +8265,7 @@
                                     data-inline="true"
                                     href="/hosting/inbox/exp/folder/all"
                                     class="_10wieer"
-                                    ><span class="_e296pg"
+                                    ><span class="relative"
                                       ><svg
                                         viewBox="0 0 32 32"
                                         xmlns="http://www.w3.org/2000/svg"
@@ -8403,7 +8403,7 @@
                                                             >5:00 PM</span
                                                           >
                                                         </div>
-                                                        <div class="_e296pg">
+                                                        <div class="relative">
                                                           <div>
                                                             <div
                                                               class="_58izcu"
@@ -8511,7 +8511,7 @@
                                                             >6:33 PM</span
                                                           >
                                                         </div>
-                                                        <div class="_e296pg">
+                                                        <div class="relative">
                                                           <div>
                                                             <div
                                                               class="_58izcu"
@@ -8617,7 +8617,7 @@
                                                             >6:39 PM</span
                                                           >
                                                         </div>
-                                                        <div class="_e296pg">
+                                                        <div class="relative">
                                                           <div>
                                                             <div
                                                               class="_58izcu"
@@ -8725,7 +8725,7 @@
                                                             >7:30 PM</span
                                                           >
                                                         </div>
-                                                        <div class="_e296pg">
+                                                        <div class="relative">
                                                           <div>
                                                             <div
                                                               class="_58izcu"
@@ -8768,7 +8768,7 @@
                                               type="button"
                                               class="_pfn378"
                                             >
-                                              <span class="_e296pg"
+                                              <span class="relative"
                                                 ><svg
                                                   viewBox="0 0 32 32"
                                                   xmlns="http://www.w3.org/2000/svg"
@@ -8798,7 +8798,7 @@
                                               type="button"
                                               class="_pfn378"
                                             >
-                                              <span class="_e296pg"
+                                              <span class="relative"
                                                 ><svg
                                                   viewBox="0 0 32 32"
                                                   xmlns="http://www.w3.org/2000/svg"
@@ -8877,7 +8877,7 @@
                                     data-inline="true"
                                     href="/hosting/inbox/exp/folder/all/thread/1212691250"
                                     class="_10wieer"
-                                    ><span class="_e296pg"
+                                    ><span class="relative"
                                       ><svg
                                         viewBox="0 0 32 32"
                                         xmlns="http://www.w3.org/2000/svg"
@@ -8920,7 +8920,7 @@
                                     data-inline="true"
                                     href="/hosting/inbox/exp/folder/all/thread/1212691250"
                                     class="_10wieer"
-                                    ><span class="_e296pg"
+                                    ><span class="relative"
                                       ><svg
                                         viewBox="0 0 32 32"
                                         xmlns="http://www.w3.org/2000/svg"
