--- a/insights.html
+++ b/insights.html
@@ -390,7 +390,7 @@
                                       </select>
                                     </div>
                                   </div>
-                                  <div class="_e296pg">
+                                  <div class="relative">
                                     <div style="width: 100%; height: 100%">
                                       <div
                                         style="
