--- a/notifications.html
+++ b/notifications.html
@@ -251,7 +251,7 @@
                                       type="button"
                                       class="_j8jvwx"
                                     >
-                                      <span class="_e296pg"
+                                      <span class="relative"
                                         ><svg
                                           viewBox="0 0 16 16"
                                           xmlns="http://www.w3.org/2000/svg"
@@ -462,7 +462,7 @@
                                           type="button"
                                           class="btn-close"
                                         >
-                                          <span class="_e296pg"
+                                          <span class="relative"
                                             ><span class="_a7a5sx"
                                               ><svg
                                                 viewBox="0 0 32 32"
@@ -542,7 +542,7 @@
                                           type="button"
                                           class="btn-close"
                                         >
-                                          <span class="_e296pg"
+                                          <span class="relative"
                                             ><span class="_a7a5sx"
                                               ><svg
                                                 viewBox="0 0 32 32"
