--- a/payments/guest-contributions.html
+++ b/payments/guest-contributions.html
@@ -269,7 +269,7 @@
                                   </h1>
                                 </div>
                               </div>
-                              <div class="_e296pg">
+                              <div class="relative">
                                 <div class="_2h22gn">
                                   <div class="_169grxv2">
                                     <div style="margin-top: 36px">
@@ -727,7 +727,7 @@
                                 <div class="_2h22gn">
                                   <div class="_169grxv2">
                                     <div>
-                                      <div class="_e296pg">
+                                      <div class="relative">
                                         <div class="_4nwxh0j">
                                           <div class="_qgvrjoy">
                                             <div role="tablist" class="_csc5ey">
