--- a/payments/payout-methods.html
+++ b/payments/payout-methods.html
@@ -270,7 +270,7 @@
                                   </h1>
                                 </div>
                               </div>
-                              <div class="_e296pg">
+                              <div class="relative">
                                 <div dir="ltr">
                                   <div data-theme="" class="t1bgcr6e">
                                     <div>
@@ -790,7 +790,7 @@
                                     <div
                                       id="account-settings-main-navigation-tabs"
                                     >
-                                      <div class="_e296pg">
+                                      <div class="relative">
                                         <div
                                           class="_1xkr92p"
                                           data-testid="tab-list-wrapper"
