--- a/signup_login.html
+++ b/signup_login.html
@@ -216,7 +216,7 @@
                                       >
                                         <div class="d-flex">
                                           <div
-                                            class="_e296pg"
+                                            class="relative"
                                             style="flex: 1 1 0%"
                                           >
                                             <div
@@ -1047,7 +1047,7 @@
                                         </div>
                                         <div class="d-flex">
                                           <div
-                                            class="_e296pg"
+                                            class="relative"
                                             style="flex: 2 1 0%"
                                           >
                                             <div
@@ -1123,7 +1123,7 @@
                                         </div>
                                         <div class="d-flex">
                                           <div
-                                            class="_e296pg"
+                                            class="relative"
                                             style="flex: 2 1 0%"
                                           >
                                             <div
@@ -2057,7 +2057,7 @@
                                       >
                                         <div class="d-flex">
                                           <div
-                                            class="_e296pg"
+                                            class="relative"
                                             style="flex: 1 1 0%"
                                           >
                                             <div
@@ -2128,7 +2128,7 @@
                                         </div>
                                         <div class="d-flex">
                                           <div
-                                            class="_e296pg"
+                                            class="relative"
                                             style="flex: 1 1 0%"
                                           >
                                             <div
@@ -2213,7 +2213,7 @@
                                       >
                                         <div class="d-flex">
                                           <div
-                                            class="_e296pg"
+                                            class="relative"
                                             style="flex: 1 1 0%"
                                           >
                                             <div
@@ -2285,7 +2285,7 @@
                                         </div>
                                         <div class="d-flex">
                                           <div
-                                            class="_e296pg"
+                                            class="relative"
                                             style="flex: 1 1 0%"
                                           >
                                             <div
@@ -2389,7 +2389,7 @@
                                         >
                                           <div class="d-flex">
                                             <div
-                                              class="_e296pg"
+                                              class="relative"
                                               style="flex: 1 1 0%"
                                             >
                                               <div
@@ -2476,7 +2476,7 @@
                                         >
                                           <div class="d-flex">
                                             <div
-                                              class="_e296pg"
+                                              class="relative"
                                               style="flex: 1 1 0%"
                                             >
                                               <div
@@ -3270,7 +3270,7 @@
                                     >
                                       <div class="d-flex">
                                         <div
-                                          class="_e296pg"
+                                          class="relative"
                                           style="flex: 1 1 0%"
                                         >
                                           <div
@@ -4099,7 +4099,7 @@
                                       </div>
                                       <div class="d-flex">
                                         <div
-                                          class="_e296pg"
+                                          class="relative"
                                           style="flex: 2 1 0%"
                                         >
                                           <div
@@ -4175,7 +4175,7 @@
                                       </div>
                                       <div class="d-flex">
                                         <div
-                                          class="_e296pg"
+                                          class="relative"
                                           style="flex: 2 1 0%"
                                         >
                                           <div
@@ -5090,7 +5090,7 @@
                                     >
                                       <div class="d-flex">
                                         <div
-                                          class="_e296pg"
+                                          class="relative"
                                           style="flex: 1 1 0%"
                                         >
                                           <div
@@ -5161,7 +5161,7 @@
                                       </div>
                                       <div class="d-flex">
                                         <div
-                                          class="_e296pg"
+                                          class="relative"
                                           style="flex: 1 1 0%"
                                         >
                                           <div
@@ -5246,7 +5246,7 @@
                                     >
                                       <div class="d-flex">
                                         <div
-                                          class="_e296pg"
+                                          class="relative"
                                           style="flex: 1 1 0%"
                                         >
                                           <div
@@ -5318,7 +5318,7 @@
                                       </div>
                                       <div class="d-flex">
                                         <div
-                                          class="_e296pg"
+                                          class="relative"
                                           style="flex: 1 1 0%"
                                         >
                                           <div
@@ -5422,7 +5422,7 @@
                                       >
                                         <div class="d-flex">
                                           <div
-                                            class="_e296pg"
+                                            class="relative"
                                             style="flex: 1 1 0%"
                                           >
                                             <div
@@ -5509,7 +5509,7 @@
                                       >
                                         <div class="d-flex">
                                           <div
-                                            class="_e296pg"
+                                            class="relative"
                                             style="flex: 1 1 0%"
                                           >
                                             <div
