--- a/specific_trip.html
+++ b/specific_trip.html
@@ -202,7 +202,7 @@
                                               <a
                                                 href="trips.html"
                                                 class="btn-close"
-                                                ><span class="_e296pg"
+                                                ><span class="relative"
                                                   ><div class="_7u0l7m">
                                                     <svg
                                                       viewBox="0 0 12 11"
@@ -676,7 +676,7 @@
                                                                   class="_1ue05kx"
                                                                 >
                                                                   <span
-                                                                    class="_e296pg"
+                                                                    class="relative"
                                                                     ><span
                                                                       class="_krjbj"
                                                                       >_</span
@@ -1588,7 +1588,7 @@
                                                     </div>
                                                     <div class="_1scp5ac">
                                                       <div
-                                                        class="_e296pg"
+                                                        class="relative"
                                                         style="
                                                           height: 52px;
                                                           width: 52px;
@@ -3248,7 +3248,7 @@
                                                     "
                                                   >
                                                     <div
-                                                      class="_e296pg"
+                                                      class="relative"
                                                       style="
                                                         cursor: auto;
                                                         height: 48px;
