--- a/submission/photo.html
+++ b/submission/photo.html
@@ -53,7 +53,7 @@
                             aria-label="Experience hosting dashboard"
                             href="/experience-hosting"
                             class="btn-close"
-                            ><span class="_e296pg"
+                            ><span class="relative"
                               ><svg
                                 viewBox="0 0 32 32"
                                 xmlns="http://www.w3.org/2000/svg"
@@ -84,7 +84,7 @@
                         <h2 id="edit-experience-modal-heading" class="_7x5ntq">
                           Submit your experience
                         </h2>
-                        <div class="_e296pg">
+                        <div class="relative">
                           <div>
                             <div class="box-border" id="Your idea-section-row">
                               <div
@@ -1109,7 +1109,7 @@
                                             >
                                               <div class="_1fopc40">
                                                 <div
-                                                  class="_e296pg"
+                                                  class="relative"
                                                   style="
                                                     padding-bottom: 133.33%;
                                                   "
@@ -1233,7 +1233,7 @@
                                             >
                                               <div class="_1fopc40">
                                                 <div
-                                                  class="_e296pg"
+                                                  class="relative"
                                                   style="
                                                     padding-bottom: 133.33%;
                                                   "
@@ -1357,7 +1357,7 @@
                                             >
                                               <div class="_1fopc40">
                                                 <div
-                                                  class="_e296pg"
+                                                  class="relative"
                                                   style="
                                                     padding-bottom: 133.33%;
                                                   "
@@ -1481,7 +1481,7 @@
                                             >
                                               <div class="_1fopc40">
                                                 <div
-                                                  class="_e296pg"
+                                                  class="relative"
                                                   style="
                                                     padding-bottom: 133.33%;
                                                   "
@@ -1605,7 +1605,7 @@
                                             >
                                               <div class="_1fopc40">
                                                 <div
-                                                  class="_e296pg"
+                                                  class="relative"
                                                   style="
                                                     padding-bottom: 133.33%;
                                                   "
